hard-gists/5889795/run.log
=== Docker Run Log for 5889795 ===
Started at: Mi 29. Okt 16:09:28 CET 2025

[2025-10-29 16:09:28] START: Running container for 5889795
[2025-10-29 16:09:29] SUCCESS: Container 9c86b11bf2f28b5385d9758f0d14a1b143ee6101d17441f305eaa9d51891edfe started for 5889795
=== Container logs for 5889795 ===
  File "/snippet.py", line 82
    print m, c
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5889795 ===
[2025-10-29 16:09:31] INFO: Container 9c86b11bf2f28b5385d9758f0d14a1b143ee6101d17441f305eaa9d51891edfe has stopped
